got rooted bitches

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,25 @@ crashlytics-build.properties
 hs_err_pid*
 
 
+
+
+demo_fs/.idea/encodings.xml
+demo_fs/.idea/modules.xml
+demo_fs/.idea/vcs.xml
+demo_fs/.idea/workspace.xml
+demo_fs/.idea/scopes/scope_settings.xml
+demo_fs/.idea/demo_fs.iml
+demo_fs/.idea/misc.xml
+demo_fs/.idea/.name
+.idea/.name
+.idea/encodings.xml
+.idea/codeStyleSettings.xml
+.idea/uiDesigner.xml
+.idea/compiler.xml
+.idea/workspace.xml
+.idea/misc.xml
+.idea/groovyc.xml
+.idea/scopes/scope_settings.xml
+.idea/scopes/University_of_Ontario_Institute_of_Technology.xml
+.idea/copyright/profiles_settings.xml
+.idea
